# kitsu-docker

./: .env  .gitignore  .travis.yml  Dockerfile  Dockerfile-test  NOTES.md  README.md  cgwire_checks.py  docker-compose.test.yml  docker-compose.yml  docker_push  gunicorn  gunicorn-events  init_zou.sh  justfile  launch_checks.sh  nginx  nginx.conf  pyproject.toml  start_zou.sh  supervisord.conf  test_cgwire_checks.py  versions.env  zou-events.service  zou.service
.github/workflows/: docker.yml  docker.yml-e  update-versions.yml
compose/: .env  Dockerfile  README.md  docker-compose.yml  gunicorn-events  init_zou.sh  pg_ctl.conf
docker/: postgresql-log.conf  start_zou.sh  supervisord.conf
