[tool.poetry]
name = "cgwire-tests"
version = "0.1.0"
description = "Test Kistu and Zou Docker images"
authors = ["Nicolas Ledez <github.public@ledez.net>"]
readme = "README.md"
packages = [{include = "cgwire_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
coveralls = "^3.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
